[TBE-121] added routes for getting notes by job/order guid
